Takes information movie of the bundle, show the information in the screen

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -8,4 +8,9 @@
         android:id="@+id/movieListFragment"
         android:name="com.tw.mvvm_example.view.fragments.MovieListFragment"
         android:label="Movies List" />
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="com.tw.mvvm_example.view.fragments.MovieDetailFragment"
+        android:label="Movies Detail" />
+
 </navigation>
